--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  
     <link rel="stylesheet" href="piggy.css">
     <script src="https://kit.fontawesome.com/770df5f2b2.js" crossorigin="anonymous"></script>
 
@@ -78,7 +80,7 @@
     <div class="div3">
         <div class="div3img">
 
-            <img src="multimedia/multimedia/pigg6.png" alt="" class="pigg6">
+            <img src="https://storage.googleapis.com/new-abeg-avatar-dev/piggyvest-cms-staging/securitylock_7d5d97e5a1/securitylock_7d5d97e5a1.svg" alt="" class="pigg6">
         </div>
         <div class="div2b">
             <div>
@@ -123,9 +125,8 @@
                     <a class="text3" href=""> piggybank</a>
                 </div>
             </div>
-            <div class="autoimg">
-                <img src="multimedia/piggy71 (1).png" alt="" class="phone1img">
-            </div>
+
+                <img src="https://storage.googleapis.com/piggyvestwebsite/piggywebsite2020/PB_18_Small_477bf21be6/PB_18_Small_477bf21be6.png" alt="" class="phone1img">
         </div>
 
         <div class="phone2">
@@ -145,7 +146,7 @@
                 </div>
             </div>
             <div class="autoimg">
-                <img src="multimedia/multimedia/piggy81.png" class="phone2img">
+                <img src="https://storage.googleapis.com/piggyvestwebsite/piggywebsite2020/SL_22_Small_b570b54e82/SL_22_Small_b570b54e82.png" class="phone2img">
             </div>
         </div>
 
@@ -166,7 +167,7 @@
                 </div>
             </div>
             <div class="autoimg">
-                <img src="multimedia/multimedia/piggy91.avif" alt="" class="phone3img">
+                <img src="https://storage.googleapis.com/piggyvestwebsite/piggywebsite2020/iphonw_a485f92ad1/iphonw_a485f92ad1.avif" alt=""  class="phone3img">
             </div>
         </div>
 
@@ -187,7 +188,7 @@
                 </div>
             </div>
             <div class="autoimg">
-                <img src="multimedia/2.3PIGG1.avif" class="phone4img">
+                <img src="https://storage.googleapis.com/piggyvestwebsite/piggywebsite2020/i_Phone_14_b4eaa3708a/i_Phone_14_b4eaa3708a.avif" class="phone4img">
             </div>
         </div>
 
@@ -207,7 +208,7 @@
                 </div>
             </div>
             <div class="autoimg">
-                <img src="multimedia/multimedia/piggy91.avif" alt="" class="phone5img">
+                <img src="https://storage.googleapis.com/piggyvestwebsite/piggywebsite2020/iphone12_5d07b2941e/iphone12_5d07b2941e.avif" alt="" class="phone5img">
             </div>
         </div>
 
@@ -227,7 +228,7 @@
                 </div>
             </div>
             <div class="autoimg">
-                <img src="multimedia/multimedia/piggy171.png" alt="" class="phone6img">
+                <img src="https://storage.googleapis.com/piggyvestwebsite/piggywebsite2020/i_Phone_14_1_d7b9154111/i_Phone_14_1_d7b9154111.png" alt="" class="phone6img">
             </div>
         </div>
 
@@ -249,6 +250,8 @@
 
     </div>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+  
 </body>
 
 </html>
